# mydw

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.bat
.claude/: CLAUDE.md  (+3 more)
remote/remote-backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
remote/remote-backend/app/: __init__.py  main.py  models.py
remote/remote-backend/app/api/: __init__.py  admin.py  auth.py  openapi_responses.py  self_service.py
remote/remote-backend/app/core/: __init__.py  config.py  db.py  observability.py  rate_limit.py  security.py
remote/remote-backend/app/migrations/: __init__.py  alembic.py  runner.py
remote/remote-backend/app/repositories/: __init__.py  admin.py  auth.py
remote/remote-backend/app/schemas/: admin.py  auth.py  pagination.py
remote/remote-backend/app/services/: __init__.py  admin_authz.py  admin_service.py  auth_service.py  control_service.py
remote/remote-backend/app/utils/: __init__.py  pagination.py  time.py
remote/remote-backend/migrations/: env.py
remote/remote-backend/migrations/versions/: 20260425_0001_alembic_baseline.py  20260425_0002_admin_password_algo.py  20260425_0003_admin_step_up_grants.py
remote/remote-backend/scripts/: bootstrap_admin.py  migrate.py  start-linux.sh
remote/remote-backend/tests/: __init__.py
remote/remote-backend/tests/api/: test_admin_destructive_api.py  test_admin_login_api.py  test_admin_read_api.py  test_admin_static_openapi_contract.py  test_admin_step_up_api.py  test_auth_login_api.py  test_auth_refresh_api.py  test_auth_session_api.py  test_openapi_response_contract.py  test_self_service_api.py
(+2737 files in other folders)
