[project]
name = "remote-backend"
version = "0.1.0"
description = "Phase 1 remote auth core bootstrap service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
