[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-backend"
version = "0.1.0"
description = "Phase 1 remote auth core bootstrap service."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "argon2-cffi>=23.1.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
